# pathmaster

./: .gitignore  .readthedocs.yml  404.html  CNAME  Cargo.toml  GO_MIGRATION_PLAN.md  LICENSE  README.md  ROADMAP.html  build.rs  go.mod  introduction.html  pathfinder.1  pathmaster.1  print.html  searchindex.js  searchindex.json  tree.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: go-ci.yml  mdbook.yml  readthedocs.yml  release.yml
cmd/pathmaster/: main.go
commands/: backup.html  overview.html  path-management.html  validation.html
docs/: book.toml  conf.py  index.rst  requirements.txt
docs/source/commands/: validation.md
docs/source/features/: validation.md
docs/source/go-version/: feature-parity.rst  overview.rst  usage-differences.md  usage-differences.rst
docs/source/guides/: troubleshooting.md
docs/source/reference/: backup-formats.md
docs/src/: ROADMAP.md  SUMMARY.md  doc-tree.txt  introduction.md
docs/src/commands/: backup.md  overview.md  path-management.md
docs/src/features/: backup-system.md  overview.md  shell-support.md
docs/src/getting-started/: basic-usage.md  installation.md  quick-start.md
docs/theme/: custom.css  custom.js
features/: backup-system.html  overview.html  shell-support.html  validation.html
getting-started/: basic-usage.html  installation.html  quick-start.html
guides/: error-handling.html  migration.html  system-integration.html  troubleshooting.html
internal/backup/: backup.go
internal/commands/: root.go
internal/shell/: detector.go
internal/utils/: path.go  path_test.go
reference/: backup-formats.html  configuration.html  shell-config.html
rust/: pathmaster.1
rust/src/: main.rs
src/: backup.rs  main.rs  utils.rs
src/backup/: core.rs  mod.rs  mode.rs  restore.rs  show.rs
src/commands/: delete.rs  flush.rs  list.rs  mod.rs  restore.rs  validator.rs
src/utils/: mod.rs  path.rs  path_scanner.rs  shell.rs
testing/: current.zshrc  orignal.zshrc  pathmaster-backup.zshrc.jwl
(+23 files in other folders)
