[package]
name = "pathfinder"
version = "0.1.0"
edition = "2021"
license = "MIT"
author = ["Justin Wayne Liles"]
description = "pathfinder is a powerful command-line tool written in Rust for managing your system's PATH environment variable."
repository = "https://github.com/jwliles/pathfinder"
readme = "README.md"
keywords = ["path", "environment", "configuration", "backup", "restore"]
categories = ["cli", "system", "shell"]


[dependencies]
dirs-next = "2.0.0"
clap = { version = "4.1.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
shellexpand = "2.1.0"

[dev-dependencies]
tempfile = "3.2.0"
