[package]
name = "pathmaster"
version = "0.2.5"
edition = "2021"
license = "MIT"
authors = ["Justin Wayne Liles"]
description = "pathmaster is a powerful command-line tool written in Rust for managing your system's PATH environment variable."
repository = "https://github.com/jwliles/pathmaster"
readme = "README.md"
keywords = ["path", "environment", "configuration", "backup", "restore"]
documentation = "https://jwliles.github.io/pathmaster"
build = "build.rs"


[dependencies]
dirs-next = "2.0.0"
clap = { version = "4.1.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
shellexpand = "2.1.0"
lazy_static = "1.4.0"
regex = "1.5.4"

[dev-dependencies]
tempfile = "3.2.0"
serial_test = "0.5.0"

[[bin]]
name = "pathmaster"
path = "src/main.rs"

[[bin]]
name = "pathmaster-install-man"
path = "src/bin/install_man.rs"
